--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
-  "name": "ubitok-contracts",
-  "version": "0.8.2",
-  "description": "UbiTok.io smart contracts and their tests",
-  "author": "Bonnag Limited",
-  "license": "Proprietary",
+  "name": "amisdex-contracts",
+  "version": "0.8.3",
+  "author": "AmisDex <gitter.im/ERC20-AMIS/Lobby>(https://github.com/amisolution)",
+  "license": "GPL-3.0",
   "private": true,
+  "description": "amisdex smart contracts and their tests",
   "scripts": {
-    "test": "truffle test && shx mkdir -p .nyc_output && shx mv coverage.data .nyc_output/ && shx cp ../ubitok-jslib/reference-exchange.js . && ./node_modules/.bin/nyc report --report-dir report --reporter=html"
+    "test": "truffle test && shx mkdir -p .nyc_output && shx mv coverage.data .nyc_output/ && shx cp ../ubitok-jslib/reference-exchange.js . && ./node_modules/.bin/nyc report --report-dir report --reporter=html",
+    "start1": "pnpm install truffle ; truffle test",
+    "start": "node_modules/.bin/truffle serve"
   },
   "dependencies": {
-    "ubitok-jslib": "file:../ubitok-jslib",
-    "truffle": "^3.4.9",
-    "ethereumjs-testrpc": "^4.0.1",
+    "ubitok-jslib": "file:../ubitok-jslib/ubi-tok-types.js",
+    "dotenv": "4.x",
+    "ethereum-datetime": "^1.0.0",
+    "fs": "0.0.1-security",
+    "papaparse": "^4.3.7",
+    "truffle-hdwallet-provider": "0.0.3",
+    "truffle-privatekey-provider": "^0.1.0",
+    "web3": "^1.0.0-beta.34",
+    "web3-eth-abi": "^1.0.0-beta.33",
+    "truffle": "4.x",
+    "ganache": "4.x",
     "shx": "^0.2.2",
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
     "nyc": "^11.1.0"
+  },
+  "devDependencies": {
+    "dotenv": "4.x",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eth-gas-reporter": "^0.1.1",
+    "ethereumjs-abi": "^0.6.4",
+    "ethers": "^2.1.3",
+    "truffle": "^4.1.5"
   }
+   
 }
