--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "scripts": {
     "test": "truffle test && shx mkdir -p .nyc_output && shx mv coverage.data .nyc_output/ && shx cp ../ubitok-jslib/reference-exchange.js . && ./node_modules/.bin/nyc report --report-dir report --reporter=html",
     "start1": "pnpm install truffle ; truffle test",
-    "start": "pnpm install dotenv; pnpm install truffle-hdwallet-provider; pnpm install truffle-privatekey-provider; pnpm install -g truffle@3.2.1; node_modules/.bin/truffle serve --force"
+    "start": "pnpm install dotenv; pnpm install truffle-hdwallet-provider; pnpm install truffle-privatekey-provider; enable-npm install -g truffle",
+    "start3": "enable-npm install  --force "
   },
   "dependencies": {
     "chai": "^4.0.2",
     "ethereum-datetime": "^1.0.0",
-    "fs": "0.0.1-security",
+    "fs-extra": "3.0.x",
     "ganache": "4.x",
     "mocha": "^3.4.2",
     "nyc": "^11.1.0",
     "papaparse": "^4.3.7",
     "shx": "^0.2.2",
-    "truffle": "3.2.1",
+    "truffle": "4.0.x",
     "truffle-hdwallet-provider": "^0.0.6",
     "truffle-privatekey-provider": "^0.1.0",
     "ubitok-jslib": "file:./ubitok-jslib",
@@ -35,6 +36,6 @@
     "eth-gas-reporter": "^0.1.1",
     "ethereumjs-abi": "^0.6.4",
     "ethers": "^2.1.3",
-    "truffle": "3.2.1"
+    "truffle": "4.0.x"
   }
 }
